Fix wrapping institution search
This commit adjusts the styles of the autocomplete-results container such that it doesn't wrap - which causes the page to become very wide when there are a lot of results. These styles were previously defined in multiple places but now they live in a top level form mixin which can apply to all autocomplete select inputs used for searching.

--- a/app/assets/stylesheets/mixins/form.scss
+++ b/app/assets/stylesheets/mixins/form.scss
@@ -134,6 +134,16 @@
           margin-top: 0.25rem;
         }
       }
+
+      &.autocomplete-results {
+        flex-wrap: nowrap;
+        overflow-y: scroll;
+
+        li {
+          border: 0;
+          border: 1px solid #aab7bb;
+        }
+      }
     }
 
     .planning-question-label {
