--- a/app/assets/stylesheets/team_memberships.scss
+++ b/app/assets/stylesheets/team_memberships.scss
@@ -61,14 +61,7 @@
       }
 
       ul.autocomplete-results {
-        flex-wrap: nowrap;
         max-height: 500px;
-        overflow-y: scroll;
-
-        li {
-          border: 0;
-          border: 1px solid #aab7bb;
-        }
       }
 
       .inline {
